2006-10-22  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/font-config.cc (init_fontconfig): remove FC cache warning.

2006-10-04  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PACKAGE_NAME): release 2.8.7

2006-09-19  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PATCH_LEVEL): bump version.

	* lily/book.cc (Book): copy ctor for Book.

	* scm/framework-ps.scm (dump-page): setstrokeadjust

	* lily/slur.cc (get_curve): always use scm_is_pair() looping
	scheme lists.  

	* lily/grob.cc (get_print_stencil): use retval for coloring
	grobs.

2006-08-14  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond-book.py (output): backport: Remove 
	obsolete(!?) \catcode`\@=12 in the LaTeX output.

2006-08-11  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* stepmake/aclocal.m4: backport: version check patch (thanks MWD)

2006-08-08  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION: release 2.8.6
	
	* GNUmakefile.in: backport topdoc srcdir dist fixes.

2006-08-08  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PATCH_LEVEL): bump to .6

	* GNUmakefile.in: remove *.ly symlink.

2006-08-04  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* lily/bar-line.cc: backport: Add documentation for "||:" also in
	the interface documentation.

2006-08-03  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* python/convertrules.py: backport: Fix indentation bug that broke
	conversion of files older than 1.3.117.


2006-07-31  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* python/convertrules.py: backport: bugfix for \epsfile.

2006-06-27  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* lily/bar-line.cc (compound_barline): Fix parenthesis error,
	gives correct vertical placement of \bar ":" in all staff
	sizes. Thanks Martial!

2006-06-22  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* ly/performer-init.ly: Add some missing links in the context
	hierarchy for MIDI output. There are probably some more missing!

2006-06-15  Han-Wen Nienhuys  <hanwen@lilypond.org>
