@@ -183,9 +183,13 @@ $(tree-share-prefix)/lilypond-force link-tree: GNUmakefile
 	touch $(tree-share-prefix)/lilypond-force
 
 $(tree-share-prefix)/mf-link-tree link-mf-tree: $(tree-share-prefix)/lilypond-force
-	-rm -f $(tree-share-prefix)/fonts/{otf,svg,tfm,type1}/* &&  \
+	-rm -f $(tree-share-prefix)/fonts/otf/* &&  \
+	-rm -f $(tree-share-prefix)/fonts/svg/* &&  \
+	-rm -f $(tree-share-prefix)/fonts/tfm/* &&  \
+	-rm -f $(tree-share-prefix)/fonts/type1/* &&  \
 		cd $(tree-share-prefix)/fonts/otf && \
-		ln -s ../../../../../../mf/$(outconfbase)/*.{otf,ttf} .
+		ln -s ../../../../../../mf/$(outconfbase)/*.otf . \
+		ln -s ../../../../../../mf/$(outconfbase)/*.ttf .
 	-cd $(tree-share-prefix)/fonts/svg && \
 		ln -s ../../../../../../mf/$(outconfbase)/*.svg .
 	-cd $(tree-share-prefix)/fonts/tfm && \
